# maelstrom-runtime

./: .gitignore  AUDIT.md  CHANGELOG.md  LICENSE  LOCK.json  README.md  pyproject.toml
audits/: AUDIT-2026-03-23-1.md  AUDIT-2026-03-23.md  AUDIT-2026-03-24.md
docs/: architecture.mmd  whitepaper.tex
examples/: ambiguity_storm_v0.json  black_swan_v0.json  coalition_gridlock_v0.json  constraint_collision_v0.json  creeping_doom_v0.json  crucible_v0.json  demo_runner.py  distribution_shift_v0.json  double_peak_v0.json  false_calm_v0.json  flashbang_v0.json  governance_overreach_v0.json  guilt_spiral_v0.json  identity_cage_v0.json  impulse_storm_v0.json  legal_trap_v0.json  meridian_v0.json  minimal_spec.json  noise_field_v0.json  oscillator_v0.json  over_learning_trap_v0.json  pure_economic_v0.json  pure_epistemic_v0.json  pure_legal_v0.json  pure_moral_v0.json  pure_peacetime_v0.json  pure_survival_v0.json  recovery_test_v0.json  resource_collapse_v0.json  simple_scenario.json  slow_burn_v0.json
explainer/: index.html  package-lock.json  package.json
maelstrom/: __init__.py  __main__.py  agents.py  bypasses.py  doctrine.py  export.py  feedback.py  legality.py  overlays.py  regimes.py  runtime.py  spec.py  stressors.py  trace.py  types.py  utils.py
scripts/: export_demo_trace.py  recompute_merkle.py
tests/: conftest.py  test_agents.py  test_ambiguity_storm.py  test_black_swan.py  test_bypass_paths.py  test_bypasses.py  test_coalition_gridlock.py  test_constraint_collision.py  test_creeping_doom.py  test_crucible.py  test_determinism.py  test_distribution_shift.py  (+36 more)
(+26 files in other folders)
